--- a/webpackGeek/builder-webpack/package.json
+++ b/webpackGeek/builder-webpack/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint ./lib --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "assert": "^2.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
     "glob-all": "^3.1.0",
     "istanbul": "^0.4.5",
-    "mocha": "^6.1.4",
-    "rimraf": "^2.6.3"
+    "mocha": "^6.2.2",
+    "rimraf": "^2.7.1"
   },
   "dependencies": {
     "autoprefixer": "^9.5.1",
@@ -52,6 +53,6 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.2"
   }
 }
